MACS下でビルドできるように調整。

--- a/PDFReport/Makefile
+++ b/PDFReport/Makefile
@@ -1,11 +1,14 @@
 TARGET = PDFReport.dll
 SRCS = PDFReport.cs
-LIBS = ../SCSLib/SCSLib.dll ../iText/itextsharp.dll
+LIBDIR = ..
+LOCALLIBS = $(LIBDIR)/MACS.dll
+IMPORTLIBS = itextsharp.dll
+LIBS = $(LOCALLIBS) $(IMPORTLIBS)
 DOXFILES = Index.dox examples/Example.dox
-DOCDIR = ../../doc/html/PDFReport
+DOCDIR = ../doc/PDFReport
 DOCFILE = $(DOCDIR)/index.html
 
-MCS = dmcs
+MCS = mcs
 MCSFLAGS = -warn:4 -debug+
 MCSFLAGS_RELEASE = -optimize+
 
@@ -22,8 +25,9 @@ all: $(TARGET) PDFReport.exe PDFConcat.exe
 
 doc: $(DOCFILE)
 
-$(TARGET): $(SRCS) $(LIBS) Makefile
+$(TARGET): $(SRCS) Makefile $(LOCALLIBS)
 	$(MCS) $(MCSFLAGS) -t:library $(LIBS:%=-r:%) $(SRCS) -out:$@
+	cp $(TARGET) $(TARGET).mdb $(IMPORTLIBS) $(LIBDIR)
 
 PDFReport.exe: Main.cs $(SRCS) $(LIBS) Makefile
 	$(MCS) $(MCSFLAGS) $(LIBS:%=-r:%) Main.cs $(SRCS) -out:$@
@@ -31,12 +35,12 @@ PDFReport.exe: Main.cs $(SRCS) $(LIBS) Makefile
 PDFConcat.exe: PDFConcat.cs $(SRCS) $(LIBS) Makefile
 	$(MCS) $(MCSFLAGS) $(LIBS:%=-r:%) PDFConcat.cs $(SRCS) -out:$@
 
-clean:
-	$(RM) $(TARGET) *.mdb $(DOCDIR)
-
-$(DOCFILE):	$(SRCS) $(DOXFILES) Doxyfile Makefile
+$(DOCFILE): $(SRCS) $(DOXFILES) Doxyfile Makefile
 	$(MKDIR) $(DOCDIR)
 	$(DOXYGEN)
+
+clean:
+	$(RM) $(TARGET) *.mdb *.exe $(LIBDIR)/$(TARGET) $(LIBDIR)/$(TARGET).mdb $(IMPORTLIBS:%=$(LIBDIR)/%) $(DOCDIR)
 
 release:
 	$(MCS) $(MCSFLAGS_RELEASE) -t:library $(LIBS:%=-r:%) $(SRCS) -out:$(TARGET)
